--- a/style.css
+++ b/style.css
@@ -716,6 +716,10 @@ li {
 
 /* List Blog Area CSS */
 
+.single-post p {
+    text-align: justify;
+}
+
 .list-blog.single-post .post-thumb,
 .list-blog.single-post .post-content {
     -ms-flex-preferred-size: 50%;
@@ -1074,8 +1078,8 @@ li {
 
 .breadcumb-area {
     width: 100%;
-    height: 200px;
-    background-position: center center;
+    height: 250px;
+    background-position: top center;
     background-size: cover;
     position: relative;
     z-index: 1;
@@ -1429,7 +1433,7 @@ li {
 .bg-pattern {
     background-attachment: fixed;
     background-position: center center;
-    background-image: url(img/bg-img/bg-pattern.jpg);
+    background-image: url(img/bg-img/background.jpg);
     position: relative;
     background-size: cover;
     z-index: 1;
@@ -1441,7 +1445,7 @@ li {
     left: 0;
     top: 0;
     content: '';
-    background-color: rgba(255, 255, 255, 0.95);
+    background-color: rgba(255, 255, 255, 0.92);
     z-index: -1;
 }
 
